// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LimitPriceError renders the limit price error correctly, inverted false change -10 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 12px;
}

.c6 {
  color: #222222;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c7 {
  color: #7D7D7D;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0 {
  -webkit-transition: display 125ms ease-in-out, -webkit-transform 125ms ease-in-out;
  -webkit-transition: display 125ms ease-in-out, transform 125ms ease-in-out;
  transition: display 125ms ease-in-out, transform 125ms ease-in-out;
  -webkit-animation: gyvpAI 125ms ease-in-out forwards;
  animation: gyvpAI 125ms ease-in-out forwards;
  -webkit-animation-delay: 125ms;
  animation-delay: 125ms;
  opacity: 0;
  -webkit-translate: translateY(10px);
  translate: translateY(10px);
}

.c0.exiting {
  -webkit-animation: dnSqss 125ms ease-in-out;
  animation: dnSqss 125ms ease-in-out;
}

.c3 {
  padding: 12px;
  border: 1px solid #22222212;
  border-radius: 16px;
  margin-top: 4px;
}

.c4 {
  height: 40px;
  width: 40px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 12px;
  background-color: #FFF2F1;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

<span
  class=" _dsp_contents"
>
  <span
    class=" t_light _dsp_contents is_Theme"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2 c3"
      >
        <div
          class="c4"
        >
          <svg
            fill="none"
            height="20px"
            stroke="#FF5F52"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1"
            viewBox="0 0 24 24"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
            />
            <line
              x1="12"
              x2="12"
              y1="9"
              y2="13"
            />
            <line
              x1="12"
              x2="12.01"
              y1="17"
              y2="17"
            />
          </svg>
        </div>
        <div
          class="c5"
        >
          <div
            class="c6 css-n8z49y"
          >
            Selling DAI below market price
          </div>
          <div
            class="c7 css-142zc9n"
          >
            Your limit price is 10% lower than market. Adjust your limit price to proceed.
          </div>
        </div>
      </div>
    </div>
  </span>
</span>
`;

exports[`LimitPriceError renders the limit price error correctly, inverted false change 10 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 12px;
}

.c6 {
  color: #222222;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c7 {
  color: #7D7D7D;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0 {
  -webkit-transition: display 125ms ease-in-out, -webkit-transform 125ms ease-in-out;
  -webkit-transition: display 125ms ease-in-out, transform 125ms ease-in-out;
  transition: display 125ms ease-in-out, transform 125ms ease-in-out;
  -webkit-animation: gyvpAI 125ms ease-in-out forwards;
  animation: gyvpAI 125ms ease-in-out forwards;
  -webkit-animation-delay: 125ms;
  animation-delay: 125ms;
  opacity: 0;
  -webkit-translate: translateY(10px);
  translate: translateY(10px);
}

.c0.exiting {
  -webkit-animation: dnSqss 125ms ease-in-out;
  animation: dnSqss 125ms ease-in-out;
}

.c3 {
  padding: 12px;
  border: 1px solid #22222212;
  border-radius: 16px;
  margin-top: 4px;
}

.c4 {
  height: 40px;
  width: 40px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 12px;
  background-color: #FFF2F1;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

<span
  class=" _dsp_contents"
>
  <span
    class=" t_light _dsp_contents is_Theme"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2 c3"
      >
        <div
          class="c4"
        >
          <svg
            fill="none"
            height="20px"
            stroke="#FF5F52"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1"
            viewBox="0 0 24 24"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
            />
            <line
              x1="12"
              x2="12"
              y1="9"
              y2="13"
            />
            <line
              x1="12"
              x2="12.01"
              y1="17"
              y2="17"
            />
          </svg>
        </div>
        <div
          class="c5"
        >
          <div
            class="c6 css-n8z49y"
          >
            Selling DAI below market price
          </div>
          <div
            class="c7 css-142zc9n"
          >
            Your limit price is 10% lower than market. Adjust your limit price to proceed.
          </div>
        </div>
      </div>
    </div>
  </span>
</span>
`;

exports[`LimitPriceError renders the limit price error correctly, inverted true change -10 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 12px;
}

.c6 {
  color: #222222;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c7 {
  color: #7D7D7D;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0 {
  -webkit-transition: display 125ms ease-in-out, -webkit-transform 125ms ease-in-out;
  -webkit-transition: display 125ms ease-in-out, transform 125ms ease-in-out;
  transition: display 125ms ease-in-out, transform 125ms ease-in-out;
  -webkit-animation: gyvpAI 125ms ease-in-out forwards;
  animation: gyvpAI 125ms ease-in-out forwards;
  -webkit-animation-delay: 125ms;
  animation-delay: 125ms;
  opacity: 0;
  -webkit-translate: translateY(10px);
  translate: translateY(10px);
}

.c0.exiting {
  -webkit-animation: dnSqss 125ms ease-in-out;
  animation: dnSqss 125ms ease-in-out;
}

.c3 {
  padding: 12px;
  border: 1px solid #22222212;
  border-radius: 16px;
  margin-top: 4px;
}

.c4 {
  height: 40px;
  width: 40px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 12px;
  background-color: #FFF2F1;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

<span
  class=" _dsp_contents"
>
  <span
    class=" t_light _dsp_contents is_Theme"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2 c3"
      >
        <div
          class="c4"
        >
          <svg
            fill="none"
            height="20px"
            stroke="#FF5F52"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1"
            viewBox="0 0 24 24"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
            />
            <line
              x1="12"
              x2="12"
              y1="9"
              y2="13"
            />
            <line
              x1="12"
              x2="12.01"
              y1="17"
              y2="17"
            />
          </svg>
        </div>
        <div
          class="c5"
        >
          <div
            class="c6 css-n8z49y"
          >
            Buying USDC above market price
          </div>
          <div
            class="c7 css-142zc9n"
          >
            Your limit price is 10% higher than market. Adjust your limit price to proceed.
          </div>
        </div>
      </div>
    </div>
  </span>
</span>
`;

exports[`LimitPriceError renders the limit price error correctly, inverted true change 10 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 12px;
}

.c6 {
  color: #222222;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c7 {
  color: #7D7D7D;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0 {
  -webkit-transition: display 125ms ease-in-out, -webkit-transform 125ms ease-in-out;
  -webkit-transition: display 125ms ease-in-out, transform 125ms ease-in-out;
  transition: display 125ms ease-in-out, transform 125ms ease-in-out;
  -webkit-animation: gyvpAI 125ms ease-in-out forwards;
  animation: gyvpAI 125ms ease-in-out forwards;
  -webkit-animation-delay: 125ms;
  animation-delay: 125ms;
  opacity: 0;
  -webkit-translate: translateY(10px);
  translate: translateY(10px);
}

.c0.exiting {
  -webkit-animation: dnSqss 125ms ease-in-out;
  animation: dnSqss 125ms ease-in-out;
}

.c3 {
  padding: 12px;
  border: 1px solid #22222212;
  border-radius: 16px;
  margin-top: 4px;
}

.c4 {
  height: 40px;
  width: 40px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 12px;
  background-color: #FFF2F1;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

<span
  class="t_light is_inversed _dsp_contents"
>
  <span
    class=" t_light _dsp_contents is_Theme"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2 c3"
      >
        <div
          class="c4"
        >
          <svg
            fill="none"
            height="20px"
            stroke="#FF5F52"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1"
            viewBox="0 0 24 24"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
            />
            <line
              x1="12"
              x2="12"
              y1="9"
              y2="13"
            />
            <line
              x1="12"
              x2="12.01"
              y1="17"
              y2="17"
            />
          </svg>
        </div>
        <div
          class="c5"
        >
          <div
            class="c6 css-n8z49y"
          >
            Buying USDC above market price
          </div>
          <div
            class="c7 css-142zc9n"
          >
            Your limit price is 10% higher than market. Adjust your limit price to proceed.
          </div>
        </div>
      </div>
    </div>
  </span>
</span>
`;
